src/test/ui/slightly-nice-generic-literal-messages.stderr
error[E0308]: mismatched types
  --> $DIR/slightly-nice-generic-literal-messages.rs:7:9
   |
LL |         1 => {}
   |         ^ expected struct `Foo`, found integer
   |
   = note: expected type `Foo<{float}, _>`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
